--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: Marshall Kesti
 logo: /assets/me.png
-description: Aspriring Junior Data Analyst 
+description: Aspiring Junior Data Analyst 
