--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-minimal
 title: Marshall Kesti
 logo: /assets/me.png
-description: Aspiring Data Analyst 
+description: Data Analyst 
 plugins:
   - jemoji
